test: remove verbose assertions and reduce JSON payloads in HGBrasilDividendOperationsTest